@@ -57,7 +57,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>gwt-maven-plugin</artifactId>
-                <version>2.5.0-SNAPSHOT</version>
+                <version>2.5.0-rc2</version>
                 <executions>
                     <execution>
                         <goals>
@@ -68,6 +68,7 @@
                 </executions>
                 <configuration>
                     <webappDirectory>${project.build.directory}/gwtOutput</webappDirectory>
+		    <extraJvmArgs>-XX:MaxPermSize=512m -Xmx1024m</extraJvmArgs>
                 </configuration>
             </plugin>
 
